<resources>
    <string name="app_name">My Application</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="cancel">Abbrechen</string>
    <string name="register">Registrieren</string>
    <string name="not_empty">Angabe notwendig</string>
    <string name="all_required">Bitte füllen Sie alle Felder aus.</string>
</resources>